[gd_scene load_steps=10 format=3 uid="uid://bcp73mvvyklsa"]

[ext_resource type="Shader" path="res://shaders/main_menu.gdshader" id="1_a1yju"]
[ext_resource type="FontFile" uid="uid://cf8ybldeqerw4" path="res://assets/fonts/Eleventh-Square.otf" id="1_mq6xj"]
[ext_resource type="Script" path="res://scripts/UI/main_menu.gd" id="1_wjj35"]
[ext_resource type="AudioStream" uid="uid://ddg3chj5oa408" path="res://assets/music/Geass - Katana Main Menu.mp3" id="2_dm1ax"]
[ext_resource type="PackedScene" uid="uid://bqrf045bifx32" path="res://levels/nightclub.tscn" id="2_jasfo"]
[ext_resource type="Theme" uid="uid://bmmgb58vvch3j" path="res://assets/ui_themes/default.tres" id="4_vkyno"]

[sub_resource type="LabelSettings" id="LabelSettings_k8l56"]
line_spacing = 0.0
font = ExtResource("1_mq6xj")
font_size = 125
font_color = Color(0.847059, 0.105882, 0, 1)
outline_size = 2
outline_color = Color(0, 0, 0, 1)
shadow_size = 4
shadow_color = Color(0.6, 0, 0, 1)

[sub_resource type="Theme" id="Theme_iq17a"]
default_font = ExtResource("1_mq6xj")
default_font_size = 50

[sub_resource type="ShaderMaterial" id="ShaderMaterial_budyq"]
shader = ExtResource("1_a1yju")
shader_parameter/range = 0.005
shader_parameter/noiseQuality = 250.0
shader_parameter/noiseIntensity = 4.65814e-09
shader_parameter/offsetIntensity = 0.01
shader_parameter/colorOffsetIntensity = 0.1

[node name="MainMenu" type="CanvasLayer" node_paths=PackedStringArray("ui_control", "music", "main_menu_layer", "credits_layer", "difficulty_slider", "sound_volume_slider", "vibration_toggle", "one_hit_mode_toggle", "quit_button")]
script = ExtResource("1_wjj35")
nightclub_level = ExtResource("2_jasfo")
ui_control = NodePath("Control")
music = NodePath("Music")
main_menu_layer = NodePath("Control/Panel")
credits_layer = NodePath("Control/Panel2")
difficulty_slider = NodePath("Control/Panel/VBoxContainer/Difficulty/HSlider")
sound_volume_slider = NodePath("Control/Panel/VBoxContainer/Sound Volume/HSlider")
vibration_toggle = NodePath("Control/Panel/VBoxContainer/VibrationToggle")
one_hit_mode_toggle = NodePath("Control/Panel/VBoxContainer/OneHitToggle")
quit_button = NodePath("Control/Panel/QuitButton")

[node name="BlackBackground" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(720, 1280)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameName" type="Label" parent="Control/Panel"]
layout_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -660.0
offset_right = 339.0
offset_bottom = -225.0
text = "K A T A N A
M A S T E R
S W O R D"
label_settings = SubResource("LabelSettings_k8l56")
horizontal_alignment = 2
vertical_alignment = 1
justification_flags = 0
uppercase = true

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -334.0
offset_top = -104.0
offset_right = 342.0
offset_bottom = 280.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Button" type="Button" parent="Control/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 3
theme = SubResource("Theme_iq17a")
text = "enter nightclub"

[node name="MarginContainer" type="MarginContainer" parent="Control/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="OneHitToggle" type="CheckButton" parent="Control/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme = ExtResource("4_vkyno")
text = "One Hit Mode"

[node name="MarginContainer2" type="MarginContainer" parent="Control/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="EndlessModeToggle" type="CheckButton" parent="Control/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme = ExtResource("4_vkyno")
disabled = true
text = "Endless Mode"

[node name="MarginContainer3" type="MarginContainer" parent="Control/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Difficulty" type="HBoxContainer" parent="Control/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Control/Panel/VBoxContainer/Difficulty"]
custom_minimum_size = Vector2(0, 46)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4_vkyno")
text = "Difficulty"

[node name="HSlider" type="HSlider" parent="Control/Panel/VBoxContainer/Difficulty"]
custom_minimum_size = Vector2(400, 0)
layout_direction = 3
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 1
min_value = 1.0
max_value = 3.0
value = 2.0
scrollable = false
tick_count = 3
ticks_on_borders = true

[node name="MarginContainer4" type="MarginContainer" parent="Control/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Sound Volume" type="HBoxContainer" parent="Control/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Control/Panel/VBoxContainer/Sound Volume"]
custom_minimum_size = Vector2(0, 46)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4_vkyno")
text = "Sound Volume"

[node name="HSlider" type="HSlider" parent="Control/Panel/VBoxContainer/Sound Volume"]
custom_minimum_size = Vector2(400, 60)
layout_direction = 3
layout_mode = 2
size_flags_vertical = 4
min_value = -30.0
max_value = 0.0
step = 3.0
scrollable = false
tick_count = 11
ticks_on_borders = true

[node name="MarginContainer5" type="MarginContainer" parent="Control/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="VibrationToggle" type="CheckButton" parent="Control/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme = ExtResource("4_vkyno")
button_pressed = true
text = "Vibration"
expand_icon = true

[node name="CreditsButton" type="Button" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -311.0
offset_top = -112.0
offset_right = -74.0
offset_bottom = -51.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("4_vkyno")
text = "Credits"

[node name="QuitButton" type="Button" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 38.0
offset_top = -112.0
offset_right = 278.0
offset_bottom = -51.0
grow_vertical = 0
theme = ExtResource("4_vkyno")
text = "QUIT"

[node name="Panel2" type="Panel" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="BlackBackground2" type="ColorRect" parent="Control/Panel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -640.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="ScrollContainer" type="ScrollContainer" parent="Control/Panel2"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.497
anchor_right = 0.5
anchor_bottom = 0.497
offset_left = -356.0
offset_top = -558.16
offset_right = 362.0
offset_bottom = 477.84
horizontal_scroll_mode = 0

[node name="Credits" type="Label" parent="Control/Panel2/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("4_vkyno")
text = "The game is made by 
Aleksey Sarapulov

The game uses several assets made
by other people

Arts by Ira
instagram.com/snapeira

3D Models
Enemies                                         meshy.ai

Sounds
Sounds of footsteps                   mixkit.co
Sword sounds                     myedit.online

Shaders
VHS and CRT monitor effect       pend00
Chromatic Chaos   CasualGarageCoder
Doom Screen Melt                  Tachyawn
3D burn dissolve                          hancan

Fonts
Eleventh                      Evgeny Tarasenko

Published as free game on 
https://authenticlyosha.itch.io

2024"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="Control/Panel2"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -306.0
offset_top = -111.0
offset_right = -71.0
offset_bottom = -50.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("4_vkyno")
text = "Close"

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_budyq")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_dm1ax")
autoplay = true
bus = &"MainMenu"

[connection signal="button_up" from="Control/Panel/VBoxContainer/Button" to="." method="_on_nightclub_start_button"]
[connection signal="toggled" from="Control/Panel/VBoxContainer/OneHitToggle" to="." method="_on_one_hit_toggled"]
[connection signal="value_changed" from="Control/Panel/VBoxContainer/Difficulty/HSlider" to="." method="_on_difficulty_slider_value_changed"]
[connection signal="value_changed" from="Control/Panel/VBoxContainer/Sound Volume/HSlider" to="." method="_on_sound_volume_slider_value_changed"]
[connection signal="toggled" from="Control/Panel/VBoxContainer/VibrationToggle" to="." method="_on_vibration_toggle_toggled"]
[connection signal="button_up" from="Control/Panel/CreditsButton" to="." method="_on_credits_button_up"]
[connection signal="button_down" from="Control/Panel/QuitButton" to="." method="_on_quit_button_down"]
[connection signal="button_up" from="Control/Panel2/CloseButton" to="." method="_on_credits_close_button_up"]
